--- a/Provas/P2-Karoline-de-Souza-Alves-da-Silva/Prova-A2/package.json
+++ b/Provas/P2-Karoline-de-Souza-Alves-da-Silva/Prova-A2/package.json
@@ -25,13 +25,14 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "use-debounce": "^10.0.4",
-    "yup": "^1.6.1",
-    "react-native-svg": "15.11.2"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
