--- a/Provas/P2-Karoline-de-Souza-Alves-da-Silva/BookVerse/package.json
+++ b/Provas/P2-Karoline-de-Souza-Alves-da-Silva/BookVerse/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prova-a2",
+  "name": "bookverse",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,21 +11,21 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.1.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
+    "expo": "~53.0.11",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-hook-form": "^7.57.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-get-random-values": "~1.11.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.14.5",
     "react-native-paper-dropdown": "^2.3.1",
